# WSB-2020

./: README.md
day1/: note.md  schedule.md
day2/: schedule.md
day2/Hands-on Session/face-recognition/: CMakeLists.txt
day2/Hands-on Session/face-recognition/src/: main.cpp  utils.hpp
day2/Hands-on Session/face-recognition/src/mtcnn/: mtcnn.cpp  mtcnn.hpp  mtcnn_utils.cpp  mtcnn_utils.hpp
day2/Hands-on Session/object_detection/: CMakeLists.txt  object_detection.cpp
day2/Hands-on Session/videoio/: CMakeLists.txt  videoio.cpp
day3/: README.md  schedule.md
day4/: README.md  schedule.md
day5/: README.md  schedule.md
